--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -42,6 +42,7 @@
       <HintPath>packages\RabbitMQ.Client.5.0.1\lib\net451\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\SqlDataManager.cs" />
+    <Compile Include="DataClasses\Astronomer.cs" />
+    <Compile Include="DataClasses\Astronomer.designer.cs">
+      <DependentUpon>Astronomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataClasses\CoreLibraryExtensions.cs" />
+    <Compile Include="DataClasses\Galaxy.cs" />
+    <Compile Include="DataClasses\Galaxy.designer.cs">
+      <DependentUpon>Galaxy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataClasses\Star.cs" />
+    <Compile Include="DataClasses\Star.designer.cs">
+      <DependentUpon>Star.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SassyMQ\PayloadEventArgs.cs" />
